--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,33 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:layout_height="match_parent">
 
+
+    <include layout="@layout/bottom_bar"
+        android:id="@+id/include"/>
     <android.support.v4.view.ViewPager
+        android:layout_above="@id/include"
         android:id="@+id/id_viewpager"
-        android:layout_width="fill_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1" >
-    </android.support.v4.view.ViewPager>
-    <!--<android.support.design.widget.FloatingActionButton-->
-        <!--android:id="@+id/fab"-->
-        <!--android:layout_width="wrap_content"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:layout_margin="16dp"-->
-        <!--android:src="@android:drawable/ic_dialog_email"-->
-        <!--app:backgroundTint="#00ff00"-->
-        <!--app:elevation="6dp"-->
-        <!--app:fabSize="normal"-->
-        <!--app:layout_anchor="@id/id_viewpager"-->
-        <!--app:layout_anchorGravity="bottom|right|end"-->
-        <!--app:layout_behavior="zhuwentao.com.usedesigndemo.ScrollAwareFABBehavior"-->
-        <!--app:pressedTranslationZ="8dp"-->
-        <!--app:rippleColor="#ff87ffeb"-->
-        <!--app:useCompatPadding="false"/>-->
-    <include layout="@layout/bottom_bar" />
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"></android.support.v4.view.ViewPager>
 
+    <android.support.design.widget.FloatingActionButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="69dp"
+        android:layout_marginRight="18dp"
+        android:src="@mipmap/logo"
+        android:id="@+id/fab"
+        />
 
-
-</LinearLayout>
+</RelativeLayout>
