--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,7 +20,8 @@
         android:layout_alignParentBottom="true"
         android:layout_marginBottom="69dp"
         android:layout_marginRight="18dp"
-        android:src="@mipmap/logo"
+        android:src="@drawable/ranking"
+        app:backgroundTint="@color/appColor"
         android:id="@+id/fab"
         />
 
