1、删除多余的resource 2、修改排序号

--- a/app/src/main/res/layout/find3.xml
+++ b/app/src/main/res/layout/find3.xml
@@ -35,6 +35,7 @@
         </RelativeLayout>
 
         <ImageView
+            android:src="@drawable/shi_jueju_xq"
             android:id="@+id/image_detail"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
