--- a/app/src/main/res/layout/find2.xml
+++ b/app/src/main/res/layout/find2.xml
@@ -36,7 +36,7 @@
 
         <ImageView
             android:id="@+id/image_detail"
-            android:src="@drawable/shi_jueju_xq"
+            android:src="@drawable/shi_jiuyuejiu_xq"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:scaleType="fitXY"/>
