--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -18,4 +18,6 @@
     <color name="appColor">#ffea8a</color>
     <color name="registeColor">#FEE990</color>
     <color name="theme_bg_color">#fff8f7f5</color>
+    <color name="white">#ffffff</color>
+    <color name="updata_text_color_E5">#E5E6E6</color>
 </resources>
