--- a/app/src/main/res/layout/user_info.xml
+++ b/app/src/main/res/layout/user_info.xml
@@ -8,7 +8,7 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="46dp"
-        android:background="@color/registeColor"
+        android:background="@color/colorPrimary"
         android:gravity="center_vertical">
 
         <ImageView
@@ -34,7 +34,7 @@
             android:layout_height="match_parent"
             android:layout_centerVertical="true"
             android:gravity="center"
-            android:text="注册"
+            android:text="个人资料"
             android:textColor="#000"
             android:textSize="20sp" />
 
@@ -63,17 +63,15 @@
                 android:textSize="18sp"
                 android:textStyle="bold" />
 
-            <EditText
-                android:id="@+id/name_et"
-                android:layout_width="220dip"
+            <TextView
+                android:id="@+id/nicheng"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@drawable/rounded_edittext"
-                android:gravity="center_vertical"
-                android:maxLength="11"
-                android:paddingBottom="10dip"
-                android:paddingLeft="3dp"
-                android:paddingTop="10dip"
-                android:singleLine="true" />
+                android:paddingLeft="20dp"
+                android:gravity="left"
+                android:text="昵称"
+                android:textSize="18sp"
+                android:textStyle="bold" />
 
         </LinearLayout>
 
@@ -92,18 +90,16 @@
                 android:textSize="18sp"
                 android:textStyle="bold" />
 
-            <EditText
-                android:id="@+id/age_et"
-                android:layout_width="220dip"
+            <TextView
+                android:id="@+id/nianling"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@drawable/rounded_edittext"
-                android:gravity="center_vertical"
-                android:inputType="number"
-                android:maxLength="2"
-                android:paddingBottom="10dip"
-                android:paddingLeft="3dp"
-                android:paddingTop="10dip"
-                android:singleLine="true" />
+                android:paddingLeft="20dp"
+                android:gravity="left"
+                android:text="昵称"
+                android:textSize="18sp"
+                android:textStyle="bold" />
+
 
         </LinearLayout>
 
@@ -122,17 +118,16 @@
                 android:textSize="18sp"
                 android:textStyle="bold" />
 
-            <EditText
-                android:id="@+id/school_et"
-                android:layout_width="220dip"
+            <TextView
+                android:id="@+id/xuexiao"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@drawable/rounded_edittext"
-                android:gravity="center_vertical"
-                android:maxLength="15"
-                android:paddingBottom="10dip"
-                android:paddingLeft="3dp"
-                android:paddingTop="10dip"
-                android:singleLine="true" />
+                android:paddingLeft="20dp"
+                android:gravity="left"
+                android:text="昵称"
+                android:textSize="18sp"
+                android:textStyle="bold" />
+
 
         </LinearLayout>
 
@@ -151,17 +146,16 @@
                 android:textSize="18sp"
                 android:textStyle="bold" />
 
-            <EditText
-                android:id="@+id/phone_et"
-                android:layout_width="220dip"
+            <TextView
+                android:id="@+id/shouji"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@drawable/rounded_edittext"
-                android:gravity="center_vertical"
-                android:maxLength="11"
-                android:paddingBottom="10dip"
-                android:paddingLeft="3dp"
-                android:paddingTop="10dip"
-                android:singleLine="true" />
+                android:paddingLeft="20dp"
+                android:gravity="left"
+                android:text="昵称"
+                android:textSize="18sp"
+                android:textStyle="bold" />
+
 
         </LinearLayout>
 
@@ -180,31 +174,17 @@
                 android:textSize="18sp"
                 android:textStyle="bold" />
 
-            <EditText
-                android:id="@+id/pass_et"
-                android:layout_width="220dip"
+            <TextView
+                android:id="@+id/mima"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@drawable/rounded_edittext"
-                android:gravity="center_vertical"
-                android:maxLength="11"
-                android:paddingBottom="10dip"
-                android:paddingLeft="3dp"
-                android:paddingTop="10dip"
-                android:singleLine="true" />
+                android:paddingLeft="20dp"
+                android:gravity="left"
+                android:text="昵称"
+                android:textSize="18sp"
+                android:textStyle="bold" />
 
         </LinearLayout>
-
-        <Button
-            android:id="@+id/registe_submit_btn"
-            android:layout_width="200dp"
-            android:layout_height="50dp"
-            android:layout_gravity="center_horizontal"
-            android:layout_marginBottom="20dp"
-            android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp"
-            android:layout_marginTop="50dp"
-            android:background="@drawable/registe"
-            android:textColor="@color/submit_button_text_color" />
 
     </LinearLayout>
 </LinearLayout>
