--- a/app/src/main/res/layout/main_tab_04.xml
+++ b/app/src/main/res/layout/main_tab_04.xml
@@ -40,7 +40,8 @@
                 android:layout_below="@id/head"
                 android:layout_centerHorizontal="true"
                 android:layout_marginTop="5dp"
-                android:text="小雪" />
+                android:textColor="#000000"
+                android:text="沫子" />
 
 
             <TextView
@@ -50,7 +51,7 @@
                 android:layout_below="@id/name"
                 android:layout_centerHorizontal="true"
                 android:layout_marginTop="5dp"
-                android:text="15岁 来自西安" />
+                android:text="10岁 来自西安" />
 
         </RelativeLayout>
 
