--- a/app/src/main/res/layout/main_tab_04.xml
+++ b/app/src/main/res/layout/main_tab_04.xml
@@ -81,11 +81,13 @@
                 android:background="#E3E1DA" />
 
             <LinearLayout
+                android:id="@+id/tangdou"
                 android:layout_width="match_parent"
                 android:layout_height="60dp"
                 android:gravity="center_vertical">
 
                 <TextView
+
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="18dp"
