--- a/app/src/main/res/layout/login.xml
+++ b/app/src/main/res/layout/login.xml
@@ -35,7 +35,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="40dp"
-            android:hint="账号"
+            android:hint="请输入手机号码"
             android:textColorHint="@android:color/white"
             android:theme="@style/MyEditText" />
 
