--- a/app/src/main/res/layout/main_tab_04.xml
+++ b/app/src/main/res/layout/main_tab_04.xml
@@ -91,7 +91,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="18dp"
-                    android:text="我的糖豆"
+                    android:text="我的唐豆"
                     android:textSize="20sp" />
             </LinearLayout>
 
