--- a/app/src/main/res/layout/find13.xml
+++ b/app/src/main/res/layout/find13.xml
@@ -35,7 +35,7 @@
         </RelativeLayout>
 
         <ImageView
-            android:src="@drawable/yi_funv_xq"
+            android:src="@drawable/yi_funv_xq_1"
             android:id="@+id/image_detail"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
