--- a/app/src/main/res/layout/progress_dialog.xml
+++ b/app/src/main/res/layout/progress_dialog.xml
@@ -7,10 +7,15 @@
     android:gravity="center_vertical"
     android:minHeight="60dip"
     android:orientation="vertical"
-    android:padding="10dip" >
+    android:padding="10dip">
 
+    <!--<ProgressBar-->
+    <!--style="@style/mediumCustomProgressBar"-->
+    <!--android:layout_width="wrap_content"-->
+    <!--android:layout_height="wrap_content"-->
+    <!--android:layout_gravity="center" />-->
     <ProgressBar
-        style="@style/mediumCustomProgressBar"
+        style="@style/progressbar_style2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center" />
@@ -21,10 +26,10 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="5dip"
         android:layout_marginTop="10dip"
+        android:gravity="center"
         android:maxWidth="250.0dip"
         android:minWidth="150.0dip"
         android:singleLine="true"
-        android:gravity="center"
         android:textColor="#ffffff"
         android:textSize="16sp" />
 
