--- a/app/src/main/res/layout/set.xml
+++ b/app/src/main/res/layout/set.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#FFFBEC"
+    android:background="@color/bg"
     android:orientation="vertical">
 
    <include layout="@layout/title_bar_back"/>
@@ -10,13 +10,13 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="#FFFBEC"
         android:orientation="vertical">
 
         <LinearLayout
             android:id="@+id/ziliao"
             android:layout_width="match_parent"
             android:layout_height="60dp"
+            android:background="@android:color/white"
             android:gravity="center_vertical">
 
             <TextView
@@ -36,6 +36,7 @@
             android:id="@+id/geinicheng"
             android:layout_width="match_parent"
             android:layout_height="60dp"
+            android:background="@android:color/white"
             android:gravity="center_vertical">
 
             <TextView
@@ -49,12 +50,13 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="1dp"
-            android:background="#E3E1DA" />
+            android:background="@color/click_bg" />
 
         <LinearLayout
             android:id="@+id/gaimima"
             android:layout_width="match_parent"
             android:layout_height="60dp"
+            android:background="@android:color/white"
             android:gravity="center_vertical">
 
             <TextView
@@ -68,11 +70,12 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="1dp"
-            android:background="#E3E1DA" />
+            android:background="@color/click_bg" />
 
-        <LinearLayout
+        <RelativeLayout
             android:id="@+id/huancun"
             android:layout_width="match_parent"
+            android:background="@android:color/white"
             android:layout_height="60dp"
             android:gravity="center_vertical">
 
@@ -82,17 +85,26 @@
                 android:layout_marginLeft="18dp"
                 android:text="清楚缓存"
                 android:textSize="20sp" />
-        </LinearLayout>
+            <TextView
+                android:layout_alignParentRight="true"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="18dp"
+                android:layout_marginLeft="18dp"
+                android:text="2.4M"
+                android:textSize="20sp" />
+        </RelativeLayout>
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="1dp"
-            android:background="#E3E1DA" />
+            android:background="@color/click_bg" />
 
         <LinearLayout
             android:id="@+id/gengxin"
             android:layout_width="match_parent"
             android:layout_height="60dp"
+            android:background="@android:color/white"
             android:gravity="center_vertical">
 
             <TextView
@@ -106,11 +118,12 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="1dp"
-            android:background="#E3E1DA" />
+            android:background="@color/click_bg" />
 
         <LinearLayout
-            android:id="@+id/guanyu"
+            android:id="@+id/comment"
             android:layout_width="match_parent"
+            android:background="@android:color/white"
             android:layout_height="60dp"
             android:gravity="center_vertical">
 
@@ -118,19 +131,21 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="18dp"
-                android:text="关于"
+                android:text="感觉不错？去评价一下吧"
                 android:textSize="20sp" />
         </LinearLayout>
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="1dp"
-            android:background="#E3E1DA" />
+            android:background="@color/click_bg" />
 
         <LinearLayout
+            android:layout_marginTop="18dp"
             android:id="@+id/logout"
             android:layout_width="match_parent"
             android:layout_height="60dp"
+            android:background="@android:color/white"
             android:gravity="center_vertical">
 
             <TextView
@@ -144,7 +159,7 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="1dp"
-            android:background="#E3E1DA" />
+            android:background="@color/click_bg" />
     </LinearLayout>
 
 </LinearLayout>
