--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -118,4 +118,11 @@
         <item name="android:maxHeight">1dp</item>
         <item name="android:thumb">@drawable/library_video_selector_sbar_thumb</item>
     </style>
+    <style name="progressbar_style2">
+        <item name="android:maxWidth">40.0dip</item>
+        <item name="android:maxHeight">40.0dip</item>
+        <item name="android:indeterminateDrawable">@drawable/anim_loading2</item>
+        <item name="android:minWidth">40.0dip</item>
+        <item name="android:minHeight">40.0dip</item>
+    </style>
 </resources>
