--- a/app/src/main/res/drawable/anim_loading2.xml
+++ b/app/src/main/res/drawable/anim_loading2.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <animated-rotate xmlns:android="http://schemas.android.com/apk/res/android"
-    android:drawable="@mipmap/logo"
+    android:drawable="@drawable/progress"
     android:pivotX="50.0%"
     android:pivotY="50.0%" />
     <!--
