--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -42,7 +42,7 @@
         <item name="android:background">@color/colorPrimary</item>
     </style>
     <style name="ActionBar.LeftImage">
-        <item name="android:layout_width">@dimen/left_back_width</item>
+        <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">match_parent</item>
         <item name="android:clickable">true</item>
         <item name="android:onClick">onBackPressed</item>
